# GenMusic

./: .env.example  .gitignore  README.md  Readme.txt  cli.py  pyproject.toml  server.py  vietnamese_musicgen_input_dataset.xlsx
colab/: GenMusic_Full_Training.ipynb  README.md
dataset/: README.md
datasets/: README.md
docs/: PROJECT_REPORT.md  architecture.md  data_preparation.md  main.tex  model.md  project_history.md  training.md  usage.md
genmusic_vn/: chorus_ablation.py  cli.py  dataset_scale.py  emotion.py  evaluation.py  kaggle_auto.py  licensed_lyric_crawler.py  lyric_writer.py  music_theory.py  pipeline.py  project_metrics.py  prompt_builder.py  quality_checks.py  reference_dataset.py  report_plots.py  rhyme.py  scene_planner.py  schemas.py  self_improve.py  server.py  stylebank.py  synthetic_dataset.py  text_planner.py  text_utils.py  trained_text_model.py  training_auto.py  training_dataset.py  vocal_planner.py  xlsx_dataset.py
kaggle/: README.md  musicgen_generate.py  stable_audio_cli_generate.py  stable_audio_open_generate.py
refer/: cfm.py  dit.py  trainer.py  utils.py
scratch/: inspect_dit.py
scripts/: README.md  check_kernel_progress.py  create_colab_notebook.py  create_kaggle_report_plots.py  evaluate_generation_quality.py  kaggle_phase_runtime.py  kaggle_phase_submit.py  prepare_kaggle_datasets.py  prepare_kaggle_offline_assets.py  pretrain_native_ctc.py  run_colab_full_training.py  run_experiment_matrix.py  run_full_experiment.py  run_kaggle_all_parts.py  run_kaggle_ctc_phase.py  run_kaggle_distill.py  run_kaggle_evaluate.py  run_kaggle_experiment_matrix.py  run_kaggle_full_experiment.py  run_kaggle_hf_aligned_preprocess.py  run_kaggle_iterative_self.py  run_kaggle_latent_encoder.py  run_kaggle_latent_generate_only.py  run_kaggle_latent_pipeline.py  run_kaggle_latent_resume.py  run_kaggle_multi_part_training.py  run_kaggle_preprocess_all.py  run_kaggle_preprocess_raw_audio.py  run_kaggle_quality_phase.py  (+8 more)
(+113 files in other folders)
