[project]
name = "genmusic-vn"
version = "0.1.0"
description = "Vietnamese text-to-music client orchestrating the official ASLP-lab DiffRhythm model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
kaggle = ["kaggle"]
diffrhythm = ["torch", "torchaudio", "torchdiffeq", "x-transformers", "transformers", "librosa", "pyarrow", "pandas", "ema-pytorch", "prefigure", "muq", "mutagen", "phonemizer", "faster-whisper", "matplotlib", "scipy", "bitsandbytes", "kaggle"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["genmusic_vn*"]
