[project]
name = "genmusic-vn"
version = "0.1.0"
description = "Self-authored Vietnamese text-to-music diffusion model and Kaggle runner."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
kaggle = ["kaggle"]
self = ["torch", "torchaudio", "librosa", "numpy", "scipy", "matplotlib", "kaggle", "faster-whisper", "phonemizer"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["genmusic_vn*"]
