[project]
name = "genmusic-vn"
version = "0.1.0"
description = "Vietnamese text-to-music diffusion model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "imageio-ffmpeg>=0.4.0",
    "kaggle>=1.5.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.0",
    "vocos>=0.1.0",
    "transformers>=5.13.1",
    "huggingface_hub>=0.20.0",
    "safetensors>=0.4.0",
    "openai-whisper>=20231117",
    "demucs>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["outputs", "datasets", "models", "kaggle"]
